# attestation

./: .gitignore  README.md
examples/sgx.attest.sample/: .gitignore
investigations/mbedtls.x509.perf.tests/: mbedtls.x509.perf.tests.sln  readme.md
maa.cors.demo/: Readme.md  corsdemo.sln
maa.cors.demo/wwwroot/: corsdemo.html
maa.perf.test.core/: Api.cs  Mix.Nominal.json  MixFile.cs  Options.cs  Program.cs  maa.perf.test.core.csproj
maa.perf.test.core/Authentication/: Authentication.cs  AuthenticationDelegatingHandler.cs  FailureInjectionDelegatingHandler.cs
maa.perf.test.core/Maa/: AttestationOpenEnclaveRequestBody.cs  EnclaveInfo.cs  MaaService.cs  MaaServiceApiCaller.cs
maa.perf.test.core/Model/: Api.cs  (+11 more)
maa.signing.tool/: Program.cs  maa.signing.tool.csproj  readme.md
mbedtls.x509.perf.tests/: EnclaveHosted.Release-Default.csv  EnclaveHosted.Release-Oesnmalloc.csv  EnclaveHosted.Release.csv  Standalone.Release.csv  mbedtls.x509.perf.tests.sln  open-enclave-cross-addendum.targets  readme.md
parse.sgx.quote/: ParseSgxQuote.csproj  ParseSgxQuote.sln  Program.cs
sgx.attest.sample/: readme.md
sgx.attest.sample/genquotes/: CMakeLists.txt  Makefile
sgx.attest.sample/genquotes/common/: CMakeLists.txt
sgx.attest.sample/genquotes/enclave/: CMakeLists.txt  enc.conf.prodid  enc.conf.securityversion  private.pem  public.pem
sgx.attest.sample/genquotes/host/: CMakeLists.txt  quotefile.cpp  quotefile.h
sgx.attest.sample/genquotes/quotes/: enclave.info.debug.json  enclave.info.prodid.json  enclave.info.release.json  enclave.info.securityversion.json
(+335 files in other folders)
